--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+# dev
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:jwvFkB7RrmhDpRQCRI0rODsHD6xdXbwijXDh7YMoOWM=
@@ -29,7 +30,34 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
+# prod
+# APP_NAME=Laravel
+# APP_ENV=local
+# APP_KEY=base64:jwvFkB7RrmhDpRQCRI0rODsHD6xdXbwijXDh7YMoOWM=
+# APP_DEBUG=true
+# APP_LOG_LEVEL=debug
+# APP_URL=http://kopds.com/
+
+# DB_CONNECTION=mysql
+# DB_HOST=156.67.211.101
+# DB_PORT=3306
+# DB_DATABASE=u1653254_KopDs
+# DB_USERNAME=koperasiDs
+# DB_PASSWORD='A=seX0VXn8(2'
+
+# BROADCAST_DRIVER=log
+# CACHE_DRIVER=file
+# SESSION_DRIVER=file
+# SESSION_LIFETIME=120
+# QUEUE_DRIVER=sync
+
+# REDIS_HOST=127.0.0.1
+# REDIS_PASSWORD=null
+# REDIS_PORT=6379
+
+# MAIL_DRIVER=smtp
+# MAIL_HOST=smtp.mailtrap.io
+# MAIL_PORT=2525
+# MAIL_USERNAME=null
+# MAIL_PASSWORD=null
+# MAIL_ENCRYPTION=null
