--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,13 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "consoletvs/charts": "^6.5",
         "doctrine/inflector": "^1.4",
-        "encore/laravel-admin": "^1.8",
         "fideloper/proxy": "~3.3",
         "jxlwqq/material-ui": "^1.0",
         "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "maatwebsite/excel": "^3.1"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
