--- a/.env
+++ b/.env
@@ -6,12 +6,29 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
+# dev
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=koperasi_test
-DB_USERNAME=koperasi
-DB_PASSWORD=koperasi123!
+DB_DATABASE=koperasiDS
+DB_USERNAME=root
+DB_PASSWORD=
+
+# test
+# DB_CONNECTION=mysql
+# DB_HOST=156.67.211.101
+# DB_PORT=3306
+# DB_DATABASE=u1653254_KopDs
+# DB_USERNAME=u1653254_koperasiDs
+# DB_PASSWORD='A=seX0VXn8(2'
+
+# prod
+# DB_CONNECTION=mysql
+# DB_HOST=156.67.211.101
+# DB_PORT=3306
+# DB_DATABASE=u1653254_KopDS_db
+# DB_USERNAME=u1653254_kopds
+# DB_PASSWORD='(S.h,4cm)VHr'
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -29,35 +46,3 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-
-# prod
-# APP_NAME=Laravel
-# APP_ENV=local
-# APP_KEY=base64:jwvFkB7RrmhDpRQCRI0rODsHD6xdXbwijXDh7YMoOWM=
-# APP_DEBUG=true
-# APP_LOG_LEVEL=debug
-# APP_URL=http://kopds.com/
-
-# DB_CONNECTION=mysql
-# DB_HOST=156.67.211.101
-# DB_PORT=3306
-# DB_DATABASE=u1653254_KopDs
-# DB_USERNAME=koperasiDs
-# DB_PASSWORD='A=seX0VXn8(2'
-
-# BROADCAST_DRIVER=log
-# CACHE_DRIVER=file
-# SESSION_DRIVER=file
-# SESSION_LIFETIME=120
-# QUEUE_DRIVER=sync
-
-# REDIS_HOST=127.0.0.1
-# REDIS_PASSWORD=null
-# REDIS_PORT=6379
-
-# MAIL_DRIVER=smtp
-# MAIL_HOST=smtp.mailtrap.io
-# MAIL_PORT=2525
-# MAIL_USERNAME=null
-# MAIL_PASSWORD=null
-# MAIL_ENCRYPTION=null
